kubernetes/infrastructure/controllers/garage/service-lb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: garage-s3
  namespace: garage
spec:
  type: LoadBalancer
  loadBalancerIP: ${LB_GARAGE}
  selector:
    app.kubernetes.io/name: garage
    app.kubernetes.io/instance: garage
  ports:
    - name: s3-api
      port: 3900
      targetPort: 3900
      protocol: TCP
